2002-09-14  Dom Lachowicz <doml@appligent.com>

	* rsvg.c (rsvg_start_element): Support for more tags
	(rsvg_start_ellipse): draw ellipses (buggy - ellipses are off-center)
	(rsvg_start_circle): draw circles
	(rsvg_start_rect): draw rectangles
	(rsvg_start_line): draw lines
	(rsvg_start_img): eventually will draw images (todo)
	(rsvg_start_polyline): draw polylines
	(rsvg_start_polygon): draw polygons
	(rsvg_start_any_poly): helper fn for polyline|polygon
	(rsvg_make_poly_point_list): ditto
	
2002-09-13  Dom Lachowicz <doml@appligent.com>

	* rsvg-css.c (rsvg_css_parse_color): Optimize RGB value determination from rgb() spec
	(rsvg_css_normalize_rgb_percent): Floor returned value
	(rsvg_css_parse_opacity): Check for null, use g_strtod
	(rsvg_css_parse_fontsize): ditto
	
2002-09-13  Dom Lachowicz <doml@appligent.com>

	* rsvg-css.c (rsvg_css_parse_color): Handle rgb(r,g,b) and rgb(r%,g%,b%) color specifications
	(rsvg_css_normalize_rgb): new function used in parse_color
	(rsvg_css_normalize_rgb_percent): ditto

	* test-rgb.svg: Testcase for the above
	
2002-09-13  Dom Lachowicz <doml@appligent.com>

	* rsvg-css.c (rsvg_css_parse_length): Remove setlocale calls - this should be done at a level higher than this
	
2002-09-12  Dom Lachowicz <doml@appligent.com>

	* rsvg-css.c (rsvg_css_parse_length): Handle errors, handle more units, reduce number of string compares
	(rsvg_css_parse_normalized_length): New function, like rsvg_parse_length, except normalizes output to a width or height argument
	(rsvg_css_parse_color): fix 2 memory leaks in color parsing routine

	* rsvg.c (rsvg_start_svg): Use rsvg_css_parse_length
	(rsvg_parse_style_arg): ditto
	(rsvg_start_linear_gradient): ditto
	(rsvg_start_radial_gradient): ditto
	
=== librsvg 2.0.1 ===
	
2002-07-22  Alexander Larsson  <alexl@redhat.com>

	* NEWS: 
	* configure.in:
	Bump to 2.0.1

2002-07-09  Alexander Larsson  <alexl@redhat.com>

	* librsvg.spec.in:
	s/@ART_REQUIRED@/@LIBART_REQUIRED@/